  transaction are saved and used in subsequent transactions. This can
  help in situations where object ids are used as BTree keys and the
  sequential allocation of object ids leads to conflict errors.

- ZEO servers now support a server_status method for for getting
  information the number of clients, lock requests and general
  statistics.

- The mkzeoinst script has been moved to a separate project:

    http://pypi.python.org/pypi/zope.mkzeoinstance

  and is no-longer included with ZODB.

- Improved ZEO server commit lock logging.  Now, locking activity is
  logged at the debug level until the number of wating lock requests
  gets above 3.  Log at the critical level when the number of waiting
  lock requests gets above 9.

- ZEO servers no longer log their pids in every log message. It's just
  not interesting. :)


Bugs Fixed
----------

- Fixed bug in cPickleCache's byte size estimation logic.
  (https://bugs.launchpad.net/zodb/+bug/533015)

- Fixed a serious bug that caused cache failures when run
  with Python optimization turned on.

  https://bugs.launchpad.net/zodb/+bug/544305

- When using using a ClientStorage in a Storage server, there was a
  threading bug that caused clients to get disconnected.

- Fixed a bug that caused savepoint rollback to not properly
  set object state when objects implemented _p_invalidate methods
  that reloaded ther state (unghostifiable objects).

  https://bugs.launchpad.net/zodb/+bug/428039

- cross-database wekrefs weren't handled correctly.

  https://bugs.launchpad.net/zodb/+bug/435547

- Fixed some problems in ZEO server commit lock management.

- On Mac OS X, clients that connected and disconnected quickly could
  cause a ZEO server to stop accepting connections, due to a failure
  to catch errors in the initial part of the connection process.

  The failure to properly handle exceptions while accepting
  connections is potentially problematic on other platforms.
